tests/typing/bad/testfile-leftvalue-3.go
package main

func main() { var x = &"toto" }
